add datepicker event background and day click event

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -1533,7 +1533,7 @@ table td.center, table th.center { text-align: center; }
 .no-rgba .accordion-inverse.ui-accordion .ui-accordion-header { border-top: 1px solid #707070; }
 
 .no-rgba .fc-event { background: #333; }
-
+.has-info-event a {background: red;}
 
 
 /*** MEDIA QUERIES ***/
