fix dashbord chart and calender add jquery chart lib

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -23,7 +23,7 @@ td#related-competency-level {
 
   li {
     display: block;
-    margin: 6px 0;
+    margin: 0 0 6px 0;
     a { 
       color: #fff;
       background: #0866c6;
