--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -56,7 +56,7 @@
         <div class="userloggedinfo btn-group">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <%= image_tag user_avatar_path(current_user, :normal) %>
-            <!--<i class="iconfa-th"></i> &nbsp; <%= current_user.name %><small> - <%= current_user.email %></small><span class="caret"></span--></a>
+            <!--<i class="iconfa-th"></i> &nbsp; <%= current_user.name %><small> - <%= current_user.email %></small--><span class="caret"></span></a>
             <ul class="dropdown-menu">
               <% unless current_user.admin? %>
               <li><a href="<%= edit_user_path(current_user) %>"><%= t("share.header.edit") %></a></li>
