--- a/app/views/admin/admin/dashboard.html.erb
+++ b/app/views/admin/admin/dashboard.html.erb
@@ -153,13 +153,14 @@ $(function() {
       'display': 'none',  
       'top': y - 5,  
       'left': x + 5,  
-      'border': '1px solid' + color,  
+      'border': '1px solid ' + color, 
+      'color': '#FFF',
       'padding': '1px',  
       'font-size': '9px',  
-      'border-radius': '2px',  
-      'background-color': '#fff',  
+      // 'border-radius': '2px',  
+      'background-color': '#000',  
       'font-family': 'Verdana, Arial, Helvetica, Tahoma, sans-serif',  
-      'opacity': 0.8  
+      'opacity': 0.6  
     }).appendTo("body").fadeIn(200);  
   }
   $('.tabbedwidget').tabs();
@@ -236,9 +237,9 @@ $(function() {
         <div class="span4">
           <!--h4 class="widgettitle"><span class="iconfa-check"></span>线上和线下课程比例</h4-->
           <div class="widgetcontent2 chart" onClick="location.href='/admin/manage_course'">
-            <div class="chart0 easyPieChart pull-left" data-percent="73">73</div>
+            <div class="chart0 easyPieChart pull-left" data-percent="73">73%</div>
             <div class="media-body">
-              <h3 class="media-heading">73</h3>
+              <h3 class="media-heading">73%</h3>
               <small>线上课程比例</small>
             </div>
           </div>
@@ -246,9 +247,9 @@ $(function() {
         <div class="span4">
           <!--h4 class="widgettitle"><span class="iconfa-check"></span>内部和外部讲师比例</h4-->
           <div class="widgetcontent2 chart" onClick="location.href='/admin/manage_users'">
-            <div class="chart1 easyPieChart pull-left" data-percent="36">36</div>
+            <div class="chart1 easyPieChart pull-left" data-percent="36">36%</div>
             <div class="media-body">
-              <h3 class="media-heading">36</h3>
+              <h3 class="media-heading">36%</h3>
               <small>内部讲师比例</small>
             </div>
           </div>
@@ -331,14 +332,14 @@ $(function() {
 
   <div id="dashboard-right" class="span4">
     <div class="row-fluid">
-      <span class="span4 btn"><i class="iconfa-user"></i>&nbsp;创建用户</span>
-      <span class="span4 btn"><i class="iconfa-book"></i>&nbsp;创建课程</span>
-      <span class="span4 btn"><i class="iconfa-plane"></i>&nbsp;培训计划</span>
+      <span class="span4 btn btn-primary"><i class="iconfa-user"></i>&nbsp;创建用户</span>
+      <span class="span4 btn btn-primary"><i class="iconfa-book"></i>&nbsp;创建课程</span>
+      <span class="span4 btn btn-primary"><i class="iconfa-plane"></i>&nbsp;培训计划</span>
     </div>
     <div class="row-fluid">
-      <span class="span4 btn"><i class="iconfa-pencil"></i>&nbsp;创建考试</span>
-      <span class="span4 btn"><i class="iconfa-sitemap"></i>&nbsp;创建职位</span>
-      <span class="span4 btn"><i class="iconfa-question-sign"></i>&nbsp;还没想好</span>
+      <span class="span4 btn btn-primary"><i class="iconfa-pencil"></i>&nbsp;创建考试</span>
+      <span class="span4 btn btn-primary"><i class="iconfa-sitemap"></i>&nbsp;创建职位</span>
+      <span class="span4 btn btn-primary"><i class="iconfa-question-sign"></i>&nbsp;还没想好</span>
     </div>
     <!--div class="row-fluid">
       <span class="span2 btn"></span>
@@ -353,12 +354,12 @@ $(function() {
       <h4>系统提示：</h4>
       <p style="margin: 8px 0">体验版部分功能不可用，请升级成正式版</p>
     </div--><!--alert-->
-    <!--div class="divider15"></div-->
+    <div class="divider15"></div>
 
-    <div class="divider30"></div>
+    <!--div class="divider30"></div>
     
-    <h4 class="widgettitle"><%= t('dashboard.calender.title') %></h4>
-    <div class="widgetcontent nopadding">
+    <h4 class="widgettitle"><%= t('dashboard.calender.title') %></h4-->
+    <div class="widgetcontent2 nopadding">
       <div id="datepicker"></div>
       <div class="calendar_list">
         <div class="title">2013年9月10日 星期二</div>
