--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -75,19 +75,34 @@
          </div>
       </li>
       <li class="right">
-	<a href="#" class="button">
-	  <i class="iconfa-envelope"></i><span class="badge badge-important">21</span>
-	</a>
+      	<a href="#" class="dropdown-toggle button" data-toggle="dropdown">
+      	  <i class="iconfa-envelope"></i><span class="badge badge-important">21</span>
+      	</a>
+        <ul class="dropdown-menu">
+          <% unless current_user.admin? %>
+          <li><a href="<%= edit_user_path(current_user) %>"><%= t("share.header.edit") %></a></li>
+          <li><a href=""><%= t("share.header.setting") %></a></li>
+          <% else %> 
+          <li><a href=""><%= t("share.header.edit") %></a></li>
+          <li><a href=""><%= t("share.header.setting") %></a></li>
+          <% end %>
+          <li><%= link_to t("share.header.out"), logout_path %></li>
+          <!-- <li><a href="#"><i class="iconfa-music"></i> &nbsp;Music</a></li>
+           <li><a href="#"><i class="iconfa-star"></i> &nbsp;Favorites</a></li>
+           <li><a href="#"><i class="iconfa-globe"></i> &nbsp;Notification</a></li>
+           <li class="divider"></li>
+           <li><a href="#"><i class="iconfa-arrow-right"></i> &nbsp;Signout</a></li> -->
+        </ul>
       </li>
       <li class="right">
-	<a href="#" class="button">
-	  <i class="iconfa-rss"></i><span class="badge badge-info">20</span>
-	</a>
+      	<a href="#" class="button">
+      	  <i class="iconfa-rss"></i><span class="badge badge-info">20</span>
+      	</a>
       </li>
       <li class="right">
-	<a href="#" class="button">
-	  <i class="iconfa-question-sign"></i><span class="badge badge-default">2</span>
-	</a>
+      	<a href="#" class="button">
+      	  <i class="iconfa-question-sign"></i><!--span class="badge badge-default">2</span-->
+      	</a>
       </li>
     </ul><!--headmenu-->
   </div>
