--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -108,7 +108,7 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 .header { background: #0866c6; clear: both; height: 60px; }
 .headerinner { margin-left: 200px; }
 .header .logo { width: 200px; text-align: center; padding-top: 10px; padding-bottom: 10px; float: left; border-right: 1px solid rgba(255,255,255,0.15);}
-.header .logo img { opacity: 0.8;}
+.header .logo img {margin: 5px 0;width: 120px;}
 .header .logo img:hover {opacity: 1;}
 
 .headmenu { list-style: none; }
