fix compile error

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -65,7 +65,7 @@ a, a:link { color: blue; }
 h4 { font-size: 16px; }
 
 body {
-	background: url(<%= asset_data_uri 'leftpanelbg.png' %>)/*url(<%= asset_data_uri 'bg1.png' %>);*/ } repeat-y 0 0; font-size: 12px;
+	background: url(<%= asset_data_uri 'leftpanelbg.png' %>)/*url(<%= asset_data_uri 'bg1.png' %>);*/ repeat-y 0 0; font-size: 12px;
 	font-family: 'RobotoRegular', 'Helvetica Neue', Helvetica, sans-serif; }
 body.errorpage { background: #fff url(<%= asset_data_uri 'bg1.png' %>);  }
 body.loginpage { background: #0866c6; }
