Change training plan name which complient with ajax controller form action. Also add json support for training plan.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,7 +19,7 @@
     <h4 class="widgettitle"><%= t("users.all.create")%></h4>
     <div class="widgetcontent">
       <div class="divider15"></div>
-      <%= render 'form' %>
+      <%= render :partial => 'form' %>
     </div>
   </div>
   <div id="dashboard-right" class="span4">
