--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,7 +20,7 @@
     <h4 class="widgettitle"><%= t("users.all.editprof") %></h4>
     <div class="widgetcontent">
       <div class="divider15"></div>
-      <%= render 'form' %>
+      <%= render :partial => 'form' %>
     </div>
   </div>
   <div id="dashboard-right" class="span4">
